tests/fixtures/invalid/pow_dict_str_dict.py
# Cannot call pow() with Dict[str, int], Str, Dict[str, int]
x = pow({"a": 1}, "hello", {"a": 1})
